--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <img src="images/e3nn8w.png" alt="Profil Elaina" id="profile-pic">
                     <div class="header-title-area">
                         <h2 id="chat-header-title">Elaina <span class="status-dot"></span></h2>
-                        <p class="header-signature">Elaina - Ashen Witch by <span class="signature-glow">LippWangsaff</span></p>
+                        <p class="header-signature">Elaina - Ashen Witch by <span class="signature-glow">ZIoTamvan</span></p>
                     </div>
                     <div class="header-buttons-container">
                          <div class="header-button-wrapper">
